Changes in maven

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>cicd-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cicd-demo</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -49,6 +50,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>cicd-github-actions</finalName>
 	</build>
 
 </project>
